// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design Tokens Default Theme Instances should match darkTheme snapshot 1`] = `
{
  "colorScheme": "dark",
  "colors": {
    "accent": {
      "gold": "#FFD700",
      "mint": "#00E676",
      "sky": "#4A90E2",
      "sunset": "#FF6B6B",
    },
    "background": {
      "primary": "#121212",
      "secondary": "#1E1E1E",
      "tertiary": "#2C2C2C",
    },
    "border": {
      "focus": "#42A5F5",
      "primary": "#333333",
      "secondary": "#404040",
    },
    "card": "#1E1E1E",
    "error": {
      "100": "#FFCDD2",
      "200": "#EF9A9A",
      "300": "#E57373",
      "400": "#EF5350",
      "50": "#FFEBEE",
      "500": "#F44336",
      "600": "#E53935",
      "700": "#D32F2F",
      "800": "#C62828",
      "900": "#B71C1C",
    },
    "neutral": {
      "0": "#FFFFFF",
      "100": "#F5F5F5",
      "1000": "#000000",
      "200": "#EEEEEE",
      "300": "#E0E0E0",
      "400": "#BDBDBD",
      "50": "#FAFAFA",
      "500": "#9E9E9E",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
    },
    "notification": "#F44336",
    "primary": {
      "100": "#BBDEFB",
      "200": "#90CAF9",
      "300": "#64B5F6",
      "400": "#42A5F5",
      "50": "#E3F2FD",
      "500": "#2196F3",
      "600": "#1E88E5",
      "700": "#1976D2",
      "800": "#1565C0",
      "900": "#0D47A1",
    },
    "secondary": {
      "100": "#B2DFDB",
      "200": "#80CBC4",
      "300": "#4DB6AC",
      "400": "#26A69A",
      "50": "#E0F2F1",
      "500": "#009688",
      "600": "#00897B",
      "700": "#00796B",
      "800": "#00695C",
      "900": "#004D40",
    },
    "success": {
      "100": "#DCEDC8",
      "200": "#C5E1A5",
      "300": "#AED581",
      "400": "#9CCC65",
      "50": "#F1F8E9",
      "500": "#8BC34A",
      "600": "#7CB342",
      "700": "#689F38",
      "800": "#558B2F",
      "900": "#33691E",
    },
    "surface": {
      "elevated": "#2C2C2C",
      "overlay": "rgba(0, 0, 0, 0.7)",
    },
    "text": {
      "inverse": "#000000",
      "primary": "#ECEDEE",
      "secondary": "#9BA1A6",
      "tertiary": "#687076",
    },
    "warning": {
      "100": "#FFECB3",
      "200": "#FFE082",
      "300": "#FFD54F",
      "400": "#FFCA28",
      "50": "#FFF8E1",
      "500": "#FFC107",
      "600": "#FFB300",
      "700": "#FFA000",
      "800": "#FF8F00",
      "900": "#FF6F00",
    },
  },
  "dark": true,
  "durations": {
    "component": {
      "companion": 300,
      "modal": 300,
      "page": 500,
      "tooltip": 200,
    },
    "fast": 150,
    "instant": 0,
    "normal": 300,
    "slow": 500,
    "slower": 750,
    "slowest": 1000,
  },
  "elevation": {
    "lg": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    },
    "md": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 4,
    },
    "none": {
      "elevation": 0,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    },
    "sm": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 2,
    },
    "xl": {
      "elevation": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 16,
    },
  },
  "radii": {
    "avatar": 999,
    "button": 8,
    "card": 12,
    "full": 999,
    "lg": 12,
    "md": 8,
    "modal": 16,
    "none": 0,
    "sm": 4,
    "xl": 16,
    "xs": 2,
    "xxl": 24,
  },
  "shadows": {
    "moonGlow": {
      "active": {
        "elevation": 15,
        "shadowColor": "#FFD700",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 20,
      },
      "calm": {
        "elevation": 10,
        "shadowColor": "#4A90E2",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
      },
    },
    "securityStatus": {
      "invalid": {
        "elevation": 4,
        "shadowColor": "#E74C3C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      "valid": {
        "elevation": 4,
        "shadowColor": "#27AE60",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    },
  },
  "spacing": {
    "component": {
      "gap": {
        "lg": 16,
        "md": 12,
        "sm": 8,
        "xl": 20,
        "xs": 4,
      },
      "margin": {
        "lg": 24,
        "md": 16,
        "sm": 8,
        "xl": 32,
        "xs": 4,
      },
      "padding": {
        "lg": 20,
        "md": 16,
        "sm": 12,
        "xl": 24,
        "xs": 8,
      },
    },
    "lg": 24,
    "md": 16,
    "sm": 8,
    "xl": 32,
    "xs": 4,
    "xxl": 48,
    "xxxl": 64,
  },
  "typography": {
    "fontFamily": {
      "mono": "Courier New",
      "primary": "System",
    },
    "fontSize": {
      "2xl": 24,
      "3xl": 30,
      "4xl": 36,
      "5xl": 48,
      "6xl": 60,
      "base": 16,
      "lg": 18,
      "sm": 14,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "bold": "700",
      "extrabold": "800",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "lineHeight": {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "textStyles": {
      "body": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 1.5,
      },
      "bodySmall": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 1.375,
      },
      "button": {
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 1.25,
      },
      "caption": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 1.25,
      },
      "h1": {
        "fontSize": 32,
        "fontWeight": "700",
        "lineHeight": 1.25,
      },
      "h2": {
        "fontSize": 24,
        "fontWeight": "600",
        "lineHeight": 1.375,
      },
      "h3": {
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 1.5,
      },
    },
  },
  "zIndices": {
    "base": 0,
    "companion": 9999,
    "dropdown": 100,
    "modal": 1000,
    "overlay": 10,
    "raised": 1,
    "toast": 2000,
    "tooltip": 3000,
  },
}
`;

exports[`Design Tokens Default Theme Instances should match highContrastTheme snapshot 1`] = `
{
  "colorScheme": "highContrast",
  "colors": {
    "accent": {
      "gold": "#FFD700",
      "mint": "#00E676",
      "sky": "#4A90E2",
      "sunset": "#FF6B6B",
    },
    "background": {
      "primary": "#FFFFFF",
      "secondary": "#F0F0F0",
    },
    "border": {
      "focus": "#0066CC",
      "primary": "#000000",
    },
    "card": "#F0F0F0",
    "error": {
      "100": "#FFCDD2",
      "200": "#EF9A9A",
      "300": "#E57373",
      "400": "#EF5350",
      "50": "#FFEBEE",
      "500": "#F44336",
      "600": "#E53935",
      "700": "#D32F2F",
      "800": "#C62828",
      "900": "#B71C1C",
    },
    "neutral": {
      "0": "#FFFFFF",
      "100": "#F5F5F5",
      "1000": "#000000",
      "200": "#EEEEEE",
      "300": "#E0E0E0",
      "400": "#BDBDBD",
      "50": "#FAFAFA",
      "500": "#9E9E9E",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
    },
    "notification": "#F44336",
    "primary": {
      "100": "#BBDEFB",
      "200": "#90CAF9",
      "300": "#64B5F6",
      "400": "#42A5F5",
      "50": "#E3F2FD",
      "500": "#2196F3",
      "600": "#1E88E5",
      "700": "#1976D2",
      "800": "#1565C0",
      "900": "#0D47A1",
    },
    "secondary": {
      "100": "#B2DFDB",
      "200": "#80CBC4",
      "300": "#4DB6AC",
      "400": "#26A69A",
      "50": "#E0F2F1",
      "500": "#009688",
      "600": "#00897B",
      "700": "#00796B",
      "800": "#00695C",
      "900": "#004D40",
    },
    "success": {
      "100": "#DCEDC8",
      "200": "#C5E1A5",
      "300": "#AED581",
      "400": "#9CCC65",
      "50": "#F1F8E9",
      "500": "#8BC34A",
      "600": "#7CB342",
      "700": "#689F38",
      "800": "#558B2F",
      "900": "#33691E",
    },
    "surface": {
      "elevated": "#FFFFFF",
      "overlay": "rgba(0, 0, 0, 0.5)",
    },
    "text": {
      "primary": "#000000",
      "secondary": "#333333",
    },
    "warning": {
      "100": "#FFECB3",
      "200": "#FFE082",
      "300": "#FFD54F",
      "400": "#FFCA28",
      "50": "#FFF8E1",
      "500": "#FFC107",
      "600": "#FFB300",
      "700": "#FFA000",
      "800": "#FF8F00",
      "900": "#FF6F00",
    },
  },
  "dark": false,
  "durations": {
    "component": {
      "companion": 300,
      "modal": 300,
      "page": 500,
      "tooltip": 200,
    },
    "fast": 150,
    "instant": 0,
    "normal": 300,
    "slow": 500,
    "slower": 750,
    "slowest": 1000,
  },
  "elevation": {
    "lg": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    },
    "md": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 4,
    },
    "none": {
      "elevation": 0,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    },
    "sm": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 2,
    },
    "xl": {
      "elevation": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 16,
    },
  },
  "radii": {
    "avatar": 999,
    "button": 8,
    "card": 12,
    "full": 999,
    "lg": 12,
    "md": 8,
    "modal": 16,
    "none": 0,
    "sm": 4,
    "xl": 16,
    "xs": 2,
    "xxl": 24,
  },
  "shadows": {
    "moonGlow": {
      "active": {
        "elevation": 15,
        "shadowColor": "#FFD700",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 20,
      },
      "calm": {
        "elevation": 10,
        "shadowColor": "#4A90E2",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
      },
    },
    "securityStatus": {
      "invalid": {
        "elevation": 4,
        "shadowColor": "#E74C3C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      "valid": {
        "elevation": 4,
        "shadowColor": "#27AE60",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    },
  },
  "spacing": {
    "component": {
      "gap": {
        "lg": 16,
        "md": 12,
        "sm": 8,
        "xl": 20,
        "xs": 4,
      },
      "margin": {
        "lg": 24,
        "md": 16,
        "sm": 8,
        "xl": 32,
        "xs": 4,
      },
      "padding": {
        "lg": 20,
        "md": 16,
        "sm": 12,
        "xl": 24,
        "xs": 8,
      },
    },
    "lg": 24,
    "md": 16,
    "sm": 8,
    "xl": 32,
    "xs": 4,
    "xxl": 48,
    "xxxl": 64,
  },
  "typography": {
    "fontFamily": {
      "mono": "Courier New",
      "primary": "System",
    },
    "fontSize": {
      "2xl": 24,
      "3xl": 30,
      "4xl": 36,
      "5xl": 48,
      "6xl": 60,
      "base": 16,
      "lg": 18,
      "sm": 14,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "bold": "700",
      "extrabold": "800",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "lineHeight": {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "textStyles": {
      "body": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 1.5,
      },
      "bodySmall": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 1.375,
      },
      "button": {
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 1.25,
      },
      "caption": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 1.25,
      },
      "h1": {
        "fontSize": 32,
        "fontWeight": "700",
        "lineHeight": 1.25,
      },
      "h2": {
        "fontSize": 24,
        "fontWeight": "600",
        "lineHeight": 1.375,
      },
      "h3": {
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 1.5,
      },
    },
  },
  "zIndices": {
    "base": 0,
    "companion": 9999,
    "dropdown": 100,
    "modal": 1000,
    "overlay": 10,
    "raised": 1,
    "toast": 2000,
    "tooltip": 3000,
  },
}
`;

exports[`Design Tokens Default Theme Instances should match lightTheme snapshot 1`] = `
{
  "colorScheme": "light",
  "colors": {
    "accent": {
      "gold": "#FFD700",
      "mint": "#00E676",
      "sky": "#4A90E2",
      "sunset": "#FF6B6B",
    },
    "background": {
      "primary": "#FFFFFF",
      "secondary": "#F8F9FA",
      "tertiary": "#F5F5F5",
    },
    "border": {
      "focus": "#2196F3",
      "primary": "#E0E0E0",
      "secondary": "#F0F0F0",
    },
    "card": "#F8F9FA",
    "error": {
      "100": "#FFCDD2",
      "200": "#EF9A9A",
      "300": "#E57373",
      "400": "#EF5350",
      "50": "#FFEBEE",
      "500": "#F44336",
      "600": "#E53935",
      "700": "#D32F2F",
      "800": "#C62828",
      "900": "#B71C1C",
    },
    "neutral": {
      "0": "#FFFFFF",
      "100": "#F5F5F5",
      "1000": "#000000",
      "200": "#EEEEEE",
      "300": "#E0E0E0",
      "400": "#BDBDBD",
      "50": "#FAFAFA",
      "500": "#9E9E9E",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
    },
    "notification": "#F44336",
    "primary": {
      "100": "#BBDEFB",
      "200": "#90CAF9",
      "300": "#64B5F6",
      "400": "#42A5F5",
      "50": "#E3F2FD",
      "500": "#2196F3",
      "600": "#1E88E5",
      "700": "#1976D2",
      "800": "#1565C0",
      "900": "#0D47A1",
    },
    "secondary": {
      "100": "#B2DFDB",
      "200": "#80CBC4",
      "300": "#4DB6AC",
      "400": "#26A69A",
      "50": "#E0F2F1",
      "500": "#009688",
      "600": "#00897B",
      "700": "#00796B",
      "800": "#00695C",
      "900": "#004D40",
    },
    "success": {
      "100": "#DCEDC8",
      "200": "#C5E1A5",
      "300": "#AED581",
      "400": "#9CCC65",
      "50": "#F1F8E9",
      "500": "#8BC34A",
      "600": "#7CB342",
      "700": "#689F38",
      "800": "#558B2F",
      "900": "#33691E",
    },
    "surface": {
      "elevated": "#FFFFFF",
      "overlay": "rgba(0, 0, 0, 0.5)",
    },
    "text": {
      "inverse": "#FFFFFF",
      "primary": "#11181C",
      "secondary": "#687076",
      "tertiary": "#9BA1A6",
    },
    "warning": {
      "100": "#FFECB3",
      "200": "#FFE082",
      "300": "#FFD54F",
      "400": "#FFCA28",
      "50": "#FFF8E1",
      "500": "#FFC107",
      "600": "#FFB300",
      "700": "#FFA000",
      "800": "#FF8F00",
      "900": "#FF6F00",
    },
  },
  "dark": false,
  "durations": {
    "component": {
      "companion": 300,
      "modal": 300,
      "page": 500,
      "tooltip": 200,
    },
    "fast": 150,
    "instant": 0,
    "normal": 300,
    "slow": 500,
    "slower": 750,
    "slowest": 1000,
  },
  "elevation": {
    "lg": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    },
    "md": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 4,
    },
    "none": {
      "elevation": 0,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    },
    "sm": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 2,
    },
    "xl": {
      "elevation": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 16,
    },
  },
  "radii": {
    "avatar": 999,
    "button": 8,
    "card": 12,
    "full": 999,
    "lg": 12,
    "md": 8,
    "modal": 16,
    "none": 0,
    "sm": 4,
    "xl": 16,
    "xs": 2,
    "xxl": 24,
  },
  "shadows": {
    "moonGlow": {
      "active": {
        "elevation": 15,
        "shadowColor": "#FFD700",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 20,
      },
      "calm": {
        "elevation": 10,
        "shadowColor": "#4A90E2",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
      },
    },
    "securityStatus": {
      "invalid": {
        "elevation": 4,
        "shadowColor": "#E74C3C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      "valid": {
        "elevation": 4,
        "shadowColor": "#27AE60",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    },
  },
  "spacing": {
    "component": {
      "gap": {
        "lg": 16,
        "md": 12,
        "sm": 8,
        "xl": 20,
        "xs": 4,
      },
      "margin": {
        "lg": 24,
        "md": 16,
        "sm": 8,
        "xl": 32,
        "xs": 4,
      },
      "padding": {
        "lg": 20,
        "md": 16,
        "sm": 12,
        "xl": 24,
        "xs": 8,
      },
    },
    "lg": 24,
    "md": 16,
    "sm": 8,
    "xl": 32,
    "xs": 4,
    "xxl": 48,
    "xxxl": 64,
  },
  "typography": {
    "fontFamily": {
      "mono": "Courier New",
      "primary": "System",
    },
    "fontSize": {
      "2xl": 24,
      "3xl": 30,
      "4xl": 36,
      "5xl": 48,
      "6xl": 60,
      "base": 16,
      "lg": 18,
      "sm": 14,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "bold": "700",
      "extrabold": "800",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "lineHeight": {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "textStyles": {
      "body": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 1.5,
      },
      "bodySmall": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 1.375,
      },
      "button": {
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 1.25,
      },
      "caption": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 1.25,
      },
      "h1": {
        "fontSize": 32,
        "fontWeight": "700",
        "lineHeight": 1.25,
      },
      "h2": {
        "fontSize": 24,
        "fontWeight": "600",
        "lineHeight": 1.375,
      },
      "h3": {
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 1.5,
      },
    },
  },
  "zIndices": {
    "base": 0,
    "companion": 9999,
    "dropdown": 100,
    "modal": 1000,
    "overlay": 10,
    "raised": 1,
    "toast": 2000,
    "tooltip": 3000,
  },
}
`;

exports[`Design Tokens Theme Creation should create consistent dark theme 1`] = `
{
  "colorScheme": "dark",
  "colors": {
    "accent": {
      "gold": "#FFD700",
      "mint": "#00E676",
      "sky": "#4A90E2",
      "sunset": "#FF6B6B",
    },
    "background": {
      "primary": "#121212",
      "secondary": "#1E1E1E",
      "tertiary": "#2C2C2C",
    },
    "border": {
      "focus": "#42A5F5",
      "primary": "#333333",
      "secondary": "#404040",
    },
    "card": "#1E1E1E",
    "error": {
      "100": "#FFCDD2",
      "200": "#EF9A9A",
      "300": "#E57373",
      "400": "#EF5350",
      "50": "#FFEBEE",
      "500": "#F44336",
      "600": "#E53935",
      "700": "#D32F2F",
      "800": "#C62828",
      "900": "#B71C1C",
    },
    "neutral": {
      "0": "#FFFFFF",
      "100": "#F5F5F5",
      "1000": "#000000",
      "200": "#EEEEEE",
      "300": "#E0E0E0",
      "400": "#BDBDBD",
      "50": "#FAFAFA",
      "500": "#9E9E9E",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
    },
    "notification": "#F44336",
    "primary": {
      "100": "#BBDEFB",
      "200": "#90CAF9",
      "300": "#64B5F6",
      "400": "#42A5F5",
      "50": "#E3F2FD",
      "500": "#2196F3",
      "600": "#1E88E5",
      "700": "#1976D2",
      "800": "#1565C0",
      "900": "#0D47A1",
    },
    "secondary": {
      "100": "#B2DFDB",
      "200": "#80CBC4",
      "300": "#4DB6AC",
      "400": "#26A69A",
      "50": "#E0F2F1",
      "500": "#009688",
      "600": "#00897B",
      "700": "#00796B",
      "800": "#00695C",
      "900": "#004D40",
    },
    "success": {
      "100": "#DCEDC8",
      "200": "#C5E1A5",
      "300": "#AED581",
      "400": "#9CCC65",
      "50": "#F1F8E9",
      "500": "#8BC34A",
      "600": "#7CB342",
      "700": "#689F38",
      "800": "#558B2F",
      "900": "#33691E",
    },
    "surface": {
      "elevated": "#2C2C2C",
      "overlay": "rgba(0, 0, 0, 0.7)",
    },
    "text": {
      "inverse": "#000000",
      "primary": "#ECEDEE",
      "secondary": "#9BA1A6",
      "tertiary": "#687076",
    },
    "warning": {
      "100": "#FFECB3",
      "200": "#FFE082",
      "300": "#FFD54F",
      "400": "#FFCA28",
      "50": "#FFF8E1",
      "500": "#FFC107",
      "600": "#FFB300",
      "700": "#FFA000",
      "800": "#FF8F00",
      "900": "#FF6F00",
    },
  },
  "dark": true,
  "durations": {
    "component": {
      "companion": 300,
      "modal": 300,
      "page": 500,
      "tooltip": 200,
    },
    "fast": 150,
    "instant": 0,
    "normal": 300,
    "slow": 500,
    "slower": 750,
    "slowest": 1000,
  },
  "elevation": {
    "lg": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    },
    "md": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 4,
    },
    "none": {
      "elevation": 0,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    },
    "sm": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 2,
    },
    "xl": {
      "elevation": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 16,
    },
  },
  "radii": {
    "avatar": 999,
    "button": 8,
    "card": 12,
    "full": 999,
    "lg": 12,
    "md": 8,
    "modal": 16,
    "none": 0,
    "sm": 4,
    "xl": 16,
    "xs": 2,
    "xxl": 24,
  },
  "shadows": {
    "moonGlow": {
      "active": {
        "elevation": 15,
        "shadowColor": "#FFD700",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 20,
      },
      "calm": {
        "elevation": 10,
        "shadowColor": "#4A90E2",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
      },
    },
    "securityStatus": {
      "invalid": {
        "elevation": 4,
        "shadowColor": "#E74C3C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      "valid": {
        "elevation": 4,
        "shadowColor": "#27AE60",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    },
  },
  "spacing": {
    "component": {
      "gap": {
        "lg": 16,
        "md": 12,
        "sm": 8,
        "xl": 20,
        "xs": 4,
      },
      "margin": {
        "lg": 24,
        "md": 16,
        "sm": 8,
        "xl": 32,
        "xs": 4,
      },
      "padding": {
        "lg": 20,
        "md": 16,
        "sm": 12,
        "xl": 24,
        "xs": 8,
      },
    },
    "lg": 24,
    "md": 16,
    "sm": 8,
    "xl": 32,
    "xs": 4,
    "xxl": 48,
    "xxxl": 64,
  },
  "typography": {
    "fontFamily": {
      "mono": "Courier New",
      "primary": "System",
    },
    "fontSize": {
      "2xl": 24,
      "3xl": 30,
      "4xl": 36,
      "5xl": 48,
      "6xl": 60,
      "base": 16,
      "lg": 18,
      "sm": 14,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "bold": "700",
      "extrabold": "800",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "lineHeight": {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "textStyles": {
      "body": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 1.5,
      },
      "bodySmall": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 1.375,
      },
      "button": {
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 1.25,
      },
      "caption": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 1.25,
      },
      "h1": {
        "fontSize": 32,
        "fontWeight": "700",
        "lineHeight": 1.25,
      },
      "h2": {
        "fontSize": 24,
        "fontWeight": "600",
        "lineHeight": 1.375,
      },
      "h3": {
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 1.5,
      },
    },
  },
  "zIndices": {
    "base": 0,
    "companion": 9999,
    "dropdown": 100,
    "modal": 1000,
    "overlay": 10,
    "raised": 1,
    "toast": 2000,
    "tooltip": 3000,
  },
}
`;

exports[`Design Tokens Theme Creation should create consistent high contrast theme 1`] = `
{
  "colorScheme": "highContrast",
  "colors": {
    "accent": {
      "gold": "#FFD700",
      "mint": "#00E676",
      "sky": "#4A90E2",
      "sunset": "#FF6B6B",
    },
    "background": {
      "primary": "#FFFFFF",
      "secondary": "#F0F0F0",
    },
    "border": {
      "focus": "#0066CC",
      "primary": "#000000",
    },
    "card": "#F0F0F0",
    "error": {
      "100": "#FFCDD2",
      "200": "#EF9A9A",
      "300": "#E57373",
      "400": "#EF5350",
      "50": "#FFEBEE",
      "500": "#F44336",
      "600": "#E53935",
      "700": "#D32F2F",
      "800": "#C62828",
      "900": "#B71C1C",
    },
    "neutral": {
      "0": "#FFFFFF",
      "100": "#F5F5F5",
      "1000": "#000000",
      "200": "#EEEEEE",
      "300": "#E0E0E0",
      "400": "#BDBDBD",
      "50": "#FAFAFA",
      "500": "#9E9E9E",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
    },
    "notification": "#F44336",
    "primary": {
      "100": "#BBDEFB",
      "200": "#90CAF9",
      "300": "#64B5F6",
      "400": "#42A5F5",
      "50": "#E3F2FD",
      "500": "#2196F3",
      "600": "#1E88E5",
      "700": "#1976D2",
      "800": "#1565C0",
      "900": "#0D47A1",
    },
    "secondary": {
      "100": "#B2DFDB",
      "200": "#80CBC4",
      "300": "#4DB6AC",
      "400": "#26A69A",
      "50": "#E0F2F1",
      "500": "#009688",
      "600": "#00897B",
      "700": "#00796B",
      "800": "#00695C",
      "900": "#004D40",
    },
    "success": {
      "100": "#DCEDC8",
      "200": "#C5E1A5",
      "300": "#AED581",
      "400": "#9CCC65",
      "50": "#F1F8E9",
      "500": "#8BC34A",
      "600": "#7CB342",
      "700": "#689F38",
      "800": "#558B2F",
      "900": "#33691E",
    },
    "surface": {
      "elevated": "#FFFFFF",
      "overlay": "rgba(0, 0, 0, 0.5)",
    },
    "text": {
      "primary": "#000000",
      "secondary": "#333333",
    },
    "warning": {
      "100": "#FFECB3",
      "200": "#FFE082",
      "300": "#FFD54F",
      "400": "#FFCA28",
      "50": "#FFF8E1",
      "500": "#FFC107",
      "600": "#FFB300",
      "700": "#FFA000",
      "800": "#FF8F00",
      "900": "#FF6F00",
    },
  },
  "dark": false,
  "durations": {
    "component": {
      "companion": 300,
      "modal": 300,
      "page": 500,
      "tooltip": 200,
    },
    "fast": 150,
    "instant": 0,
    "normal": 300,
    "slow": 500,
    "slower": 750,
    "slowest": 1000,
  },
  "elevation": {
    "lg": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    },
    "md": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 4,
    },
    "none": {
      "elevation": 0,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    },
    "sm": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 2,
    },
    "xl": {
      "elevation": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 16,
    },
  },
  "radii": {
    "avatar": 999,
    "button": 8,
    "card": 12,
    "full": 999,
    "lg": 12,
    "md": 8,
    "modal": 16,
    "none": 0,
    "sm": 4,
    "xl": 16,
    "xs": 2,
    "xxl": 24,
  },
  "shadows": {
    "moonGlow": {
      "active": {
        "elevation": 15,
        "shadowColor": "#FFD700",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 20,
      },
      "calm": {
        "elevation": 10,
        "shadowColor": "#4A90E2",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
      },
    },
    "securityStatus": {
      "invalid": {
        "elevation": 4,
        "shadowColor": "#E74C3C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      "valid": {
        "elevation": 4,
        "shadowColor": "#27AE60",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    },
  },
  "spacing": {
    "component": {
      "gap": {
        "lg": 16,
        "md": 12,
        "sm": 8,
        "xl": 20,
        "xs": 4,
      },
      "margin": {
        "lg": 24,
        "md": 16,
        "sm": 8,
        "xl": 32,
        "xs": 4,
      },
      "padding": {
        "lg": 20,
        "md": 16,
        "sm": 12,
        "xl": 24,
        "xs": 8,
      },
    },
    "lg": 24,
    "md": 16,
    "sm": 8,
    "xl": 32,
    "xs": 4,
    "xxl": 48,
    "xxxl": 64,
  },
  "typography": {
    "fontFamily": {
      "mono": "Courier New",
      "primary": "System",
    },
    "fontSize": {
      "2xl": 24,
      "3xl": 30,
      "4xl": 36,
      "5xl": 48,
      "6xl": 60,
      "base": 16,
      "lg": 18,
      "sm": 14,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "bold": "700",
      "extrabold": "800",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "lineHeight": {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "textStyles": {
      "body": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 1.5,
      },
      "bodySmall": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 1.375,
      },
      "button": {
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 1.25,
      },
      "caption": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 1.25,
      },
      "h1": {
        "fontSize": 32,
        "fontWeight": "700",
        "lineHeight": 1.25,
      },
      "h2": {
        "fontSize": 24,
        "fontWeight": "600",
        "lineHeight": 1.375,
      },
      "h3": {
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 1.5,
      },
    },
  },
  "zIndices": {
    "base": 0,
    "companion": 9999,
    "dropdown": 100,
    "modal": 1000,
    "overlay": 10,
    "raised": 1,
    "toast": 2000,
    "tooltip": 3000,
  },
}
`;

exports[`Design Tokens Theme Creation should create consistent light theme 1`] = `
{
  "colorScheme": "light",
  "colors": {
    "accent": {
      "gold": "#FFD700",
      "mint": "#00E676",
      "sky": "#4A90E2",
      "sunset": "#FF6B6B",
    },
    "background": {
      "primary": "#FFFFFF",
      "secondary": "#F8F9FA",
      "tertiary": "#F5F5F5",
    },
    "border": {
      "focus": "#2196F3",
      "primary": "#E0E0E0",
      "secondary": "#F0F0F0",
    },
    "card": "#F8F9FA",
    "error": {
      "100": "#FFCDD2",
      "200": "#EF9A9A",
      "300": "#E57373",
      "400": "#EF5350",
      "50": "#FFEBEE",
      "500": "#F44336",
      "600": "#E53935",
      "700": "#D32F2F",
      "800": "#C62828",
      "900": "#B71C1C",
    },
    "neutral": {
      "0": "#FFFFFF",
      "100": "#F5F5F5",
      "1000": "#000000",
      "200": "#EEEEEE",
      "300": "#E0E0E0",
      "400": "#BDBDBD",
      "50": "#FAFAFA",
      "500": "#9E9E9E",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
    },
    "notification": "#F44336",
    "primary": {
      "100": "#BBDEFB",
      "200": "#90CAF9",
      "300": "#64B5F6",
      "400": "#42A5F5",
      "50": "#E3F2FD",
      "500": "#2196F3",
      "600": "#1E88E5",
      "700": "#1976D2",
      "800": "#1565C0",
      "900": "#0D47A1",
    },
    "secondary": {
      "100": "#B2DFDB",
      "200": "#80CBC4",
      "300": "#4DB6AC",
      "400": "#26A69A",
      "50": "#E0F2F1",
      "500": "#009688",
      "600": "#00897B",
      "700": "#00796B",
      "800": "#00695C",
      "900": "#004D40",
    },
    "success": {
      "100": "#DCEDC8",
      "200": "#C5E1A5",
      "300": "#AED581",
      "400": "#9CCC65",
      "50": "#F1F8E9",
      "500": "#8BC34A",
      "600": "#7CB342",
      "700": "#689F38",
      "800": "#558B2F",
      "900": "#33691E",
    },
    "surface": {
      "elevated": "#FFFFFF",
      "overlay": "rgba(0, 0, 0, 0.5)",
    },
    "text": {
      "inverse": "#FFFFFF",
      "primary": "#11181C",
      "secondary": "#687076",
      "tertiary": "#9BA1A6",
    },
    "warning": {
      "100": "#FFECB3",
      "200": "#FFE082",
      "300": "#FFD54F",
      "400": "#FFCA28",
      "50": "#FFF8E1",
      "500": "#FFC107",
      "600": "#FFB300",
      "700": "#FFA000",
      "800": "#FF8F00",
      "900": "#FF6F00",
    },
  },
  "dark": false,
  "durations": {
    "component": {
      "companion": 300,
      "modal": 300,
      "page": 500,
      "tooltip": 200,
    },
    "fast": 150,
    "instant": 0,
    "normal": 300,
    "slow": 500,
    "slower": 750,
    "slowest": 1000,
  },
  "elevation": {
    "lg": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    },
    "md": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 4,
    },
    "none": {
      "elevation": 0,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    },
    "sm": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 2,
    },
    "xl": {
      "elevation": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 16,
    },
  },
  "radii": {
    "avatar": 999,
    "button": 8,
    "card": 12,
    "full": 999,
    "lg": 12,
    "md": 8,
    "modal": 16,
    "none": 0,
    "sm": 4,
    "xl": 16,
    "xs": 2,
    "xxl": 24,
  },
  "shadows": {
    "moonGlow": {
      "active": {
        "elevation": 15,
        "shadowColor": "#FFD700",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 20,
      },
      "calm": {
        "elevation": 10,
        "shadowColor": "#4A90E2",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
      },
    },
    "securityStatus": {
      "invalid": {
        "elevation": 4,
        "shadowColor": "#E74C3C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      "valid": {
        "elevation": 4,
        "shadowColor": "#27AE60",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    },
  },
  "spacing": {
    "component": {
      "gap": {
        "lg": 16,
        "md": 12,
        "sm": 8,
        "xl": 20,
        "xs": 4,
      },
      "margin": {
        "lg": 24,
        "md": 16,
        "sm": 8,
        "xl": 32,
        "xs": 4,
      },
      "padding": {
        "lg": 20,
        "md": 16,
        "sm": 12,
        "xl": 24,
        "xs": 8,
      },
    },
    "lg": 24,
    "md": 16,
    "sm": 8,
    "xl": 32,
    "xs": 4,
    "xxl": 48,
    "xxxl": 64,
  },
  "typography": {
    "fontFamily": {
      "mono": "Courier New",
      "primary": "System",
    },
    "fontSize": {
      "2xl": 24,
      "3xl": 30,
      "4xl": 36,
      "5xl": 48,
      "6xl": 60,
      "base": 16,
      "lg": 18,
      "sm": 14,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "bold": "700",
      "extrabold": "800",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "lineHeight": {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "textStyles": {
      "body": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 1.5,
      },
      "bodySmall": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 1.375,
      },
      "button": {
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 1.25,
      },
      "caption": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 1.25,
      },
      "h1": {
        "fontSize": 32,
        "fontWeight": "700",
        "lineHeight": 1.25,
      },
      "h2": {
        "fontSize": 24,
        "fontWeight": "600",
        "lineHeight": 1.375,
      },
      "h3": {
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 1.5,
      },
    },
  },
  "zIndices": {
    "base": 0,
    "companion": 9999,
    "dropdown": 100,
    "modal": 1000,
    "overlay": 10,
    "raised": 1,
    "toast": 2000,
    "tooltip": 3000,
  },
}
`;

exports[`Design Tokens Token Structure Snapshots should match colors snapshot 1`] = `
{
  "accent": {
    "gold": "#FFD700",
    "mint": "#00E676",
    "sky": "#4A90E2",
    "sunset": "#FF6B6B",
  },
  "dark": {
    "background": {
      "primary": "#121212",
      "secondary": "#1E1E1E",
      "tertiary": "#2C2C2C",
    },
    "border": {
      "focus": "#42A5F5",
      "primary": "#333333",
      "secondary": "#404040",
    },
    "surface": {
      "elevated": "#2C2C2C",
      "overlay": "rgba(0, 0, 0, 0.7)",
    },
    "text": {
      "inverse": "#000000",
      "primary": "#ECEDEE",
      "secondary": "#9BA1A6",
      "tertiary": "#687076",
    },
  },
  "error": {
    "100": "#FFCDD2",
    "200": "#EF9A9A",
    "300": "#E57373",
    "400": "#EF5350",
    "50": "#FFEBEE",
    "500": "#F44336",
    "600": "#E53935",
    "700": "#D32F2F",
    "800": "#C62828",
    "900": "#B71C1C",
  },
  "highContrast": {
    "background": {
      "primary": "#FFFFFF",
      "secondary": "#F0F0F0",
    },
    "border": {
      "focus": "#0066CC",
      "primary": "#000000",
    },
    "text": {
      "primary": "#000000",
      "secondary": "#333333",
    },
  },
  "light": {
    "background": {
      "primary": "#FFFFFF",
      "secondary": "#F8F9FA",
      "tertiary": "#F5F5F5",
    },
    "border": {
      "focus": "#2196F3",
      "primary": "#E0E0E0",
      "secondary": "#F0F0F0",
    },
    "surface": {
      "elevated": "#FFFFFF",
      "overlay": "rgba(0, 0, 0, 0.5)",
    },
    "text": {
      "inverse": "#FFFFFF",
      "primary": "#11181C",
      "secondary": "#687076",
      "tertiary": "#9BA1A6",
    },
  },
  "neutral": {
    "0": "#FFFFFF",
    "100": "#F5F5F5",
    "1000": "#000000",
    "200": "#EEEEEE",
    "300": "#E0E0E0",
    "400": "#BDBDBD",
    "50": "#FAFAFA",
    "500": "#9E9E9E",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "primary": {
    "100": "#BBDEFB",
    "200": "#90CAF9",
    "300": "#64B5F6",
    "400": "#42A5F5",
    "50": "#E3F2FD",
    "500": "#2196F3",
    "600": "#1E88E5",
    "700": "#1976D2",
    "800": "#1565C0",
    "900": "#0D47A1",
  },
  "secondary": {
    "100": "#B2DFDB",
    "200": "#80CBC4",
    "300": "#4DB6AC",
    "400": "#26A69A",
    "50": "#E0F2F1",
    "500": "#009688",
    "600": "#00897B",
    "700": "#00796B",
    "800": "#00695C",
    "900": "#004D40",
  },
  "success": {
    "100": "#DCEDC8",
    "200": "#C5E1A5",
    "300": "#AED581",
    "400": "#9CCC65",
    "50": "#F1F8E9",
    "500": "#8BC34A",
    "600": "#7CB342",
    "700": "#689F38",
    "800": "#558B2F",
    "900": "#33691E",
  },
  "warning": {
    "100": "#FFECB3",
    "200": "#FFE082",
    "300": "#FFD54F",
    "400": "#FFCA28",
    "50": "#FFF8E1",
    "500": "#FFC107",
    "600": "#FFB300",
    "700": "#FFA000",
    "800": "#FF8F00",
    "900": "#FF6F00",
  },
}
`;

exports[`Design Tokens Token Structure Snapshots should match durations snapshot 1`] = `
{
  "component": {
    "companion": 300,
    "modal": 300,
    "page": 500,
    "tooltip": 200,
  },
  "fast": 150,
  "instant": 0,
  "normal": 300,
  "slow": 500,
  "slower": 750,
  "slowest": 1000,
}
`;

exports[`Design Tokens Token Structure Snapshots should match elevation snapshot 1`] = `
{
  "lg": {
    "elevation": 8,
    "shadowColor": "#000",
    "shadowOffset": {
      "height": 4,
      "width": 0,
    },
    "shadowOpacity": 0.2,
    "shadowRadius": 8,
  },
  "md": {
    "elevation": 4,
    "shadowColor": "#000",
    "shadowOffset": {
      "height": 2,
      "width": 0,
    },
    "shadowOpacity": 0.15,
    "shadowRadius": 4,
  },
  "none": {
    "elevation": 0,
    "shadowColor": "transparent",
    "shadowOffset": {
      "height": 0,
      "width": 0,
    },
    "shadowOpacity": 0,
    "shadowRadius": 0,
  },
  "sm": {
    "elevation": 2,
    "shadowColor": "#000",
    "shadowOffset": {
      "height": 1,
      "width": 0,
    },
    "shadowOpacity": 0.1,
    "shadowRadius": 2,
  },
  "xl": {
    "elevation": 16,
    "shadowColor": "#000",
    "shadowOffset": {
      "height": 8,
      "width": 0,
    },
    "shadowOpacity": 0.25,
    "shadowRadius": 16,
  },
}
`;

exports[`Design Tokens Token Structure Snapshots should match radii snapshot 1`] = `
{
  "avatar": 999,
  "button": 8,
  "card": 12,
  "full": 999,
  "lg": 12,
  "md": 8,
  "modal": 16,
  "none": 0,
  "sm": 4,
  "xl": 16,
  "xs": 2,
  "xxl": 24,
}
`;

exports[`Design Tokens Token Structure Snapshots should match shadows snapshot 1`] = `
{
  "moonGlow": {
    "active": {
      "elevation": 15,
      "shadowColor": "#FFD700",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.8,
      "shadowRadius": 20,
    },
    "calm": {
      "elevation": 10,
      "shadowColor": "#4A90E2",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 10,
    },
  },
  "securityStatus": {
    "invalid": {
      "elevation": 4,
      "shadowColor": "#E74C3C",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 4,
    },
    "valid": {
      "elevation": 4,
      "shadowColor": "#27AE60",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 4,
    },
  },
}
`;

exports[`Design Tokens Token Structure Snapshots should match spacing snapshot 1`] = `
{
  "component": {
    "gap": {
      "lg": 16,
      "md": 12,
      "sm": 8,
      "xl": 20,
      "xs": 4,
    },
    "margin": {
      "lg": 24,
      "md": 16,
      "sm": 8,
      "xl": 32,
      "xs": 4,
    },
    "padding": {
      "lg": 20,
      "md": 16,
      "sm": 12,
      "xl": 24,
      "xs": 8,
    },
  },
  "lg": 24,
  "md": 16,
  "sm": 8,
  "xl": 32,
  "xs": 4,
  "xxl": 48,
  "xxxl": 64,
}
`;

exports[`Design Tokens Token Structure Snapshots should match tokens snapshot 1`] = `
{
  "colors": {
    "accent": {
      "gold": "#FFD700",
      "mint": "#00E676",
      "sky": "#4A90E2",
      "sunset": "#FF6B6B",
    },
    "dark": {
      "background": {
        "primary": "#121212",
        "secondary": "#1E1E1E",
        "tertiary": "#2C2C2C",
      },
      "border": {
        "focus": "#42A5F5",
        "primary": "#333333",
        "secondary": "#404040",
      },
      "surface": {
        "elevated": "#2C2C2C",
        "overlay": "rgba(0, 0, 0, 0.7)",
      },
      "text": {
        "inverse": "#000000",
        "primary": "#ECEDEE",
        "secondary": "#9BA1A6",
        "tertiary": "#687076",
      },
    },
    "error": {
      "100": "#FFCDD2",
      "200": "#EF9A9A",
      "300": "#E57373",
      "400": "#EF5350",
      "50": "#FFEBEE",
      "500": "#F44336",
      "600": "#E53935",
      "700": "#D32F2F",
      "800": "#C62828",
      "900": "#B71C1C",
    },
    "highContrast": {
      "background": {
        "primary": "#FFFFFF",
        "secondary": "#F0F0F0",
      },
      "border": {
        "focus": "#0066CC",
        "primary": "#000000",
      },
      "text": {
        "primary": "#000000",
        "secondary": "#333333",
      },
    },
    "light": {
      "background": {
        "primary": "#FFFFFF",
        "secondary": "#F8F9FA",
        "tertiary": "#F5F5F5",
      },
      "border": {
        "focus": "#2196F3",
        "primary": "#E0E0E0",
        "secondary": "#F0F0F0",
      },
      "surface": {
        "elevated": "#FFFFFF",
        "overlay": "rgba(0, 0, 0, 0.5)",
      },
      "text": {
        "inverse": "#FFFFFF",
        "primary": "#11181C",
        "secondary": "#687076",
        "tertiary": "#9BA1A6",
      },
    },
    "neutral": {
      "0": "#FFFFFF",
      "100": "#F5F5F5",
      "1000": "#000000",
      "200": "#EEEEEE",
      "300": "#E0E0E0",
      "400": "#BDBDBD",
      "50": "#FAFAFA",
      "500": "#9E9E9E",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
    },
    "primary": {
      "100": "#BBDEFB",
      "200": "#90CAF9",
      "300": "#64B5F6",
      "400": "#42A5F5",
      "50": "#E3F2FD",
      "500": "#2196F3",
      "600": "#1E88E5",
      "700": "#1976D2",
      "800": "#1565C0",
      "900": "#0D47A1",
    },
    "secondary": {
      "100": "#B2DFDB",
      "200": "#80CBC4",
      "300": "#4DB6AC",
      "400": "#26A69A",
      "50": "#E0F2F1",
      "500": "#009688",
      "600": "#00897B",
      "700": "#00796B",
      "800": "#00695C",
      "900": "#004D40",
    },
    "success": {
      "100": "#DCEDC8",
      "200": "#C5E1A5",
      "300": "#AED581",
      "400": "#9CCC65",
      "50": "#F1F8E9",
      "500": "#8BC34A",
      "600": "#7CB342",
      "700": "#689F38",
      "800": "#558B2F",
      "900": "#33691E",
    },
    "warning": {
      "100": "#FFECB3",
      "200": "#FFE082",
      "300": "#FFD54F",
      "400": "#FFCA28",
      "50": "#FFF8E1",
      "500": "#FFC107",
      "600": "#FFB300",
      "700": "#FFA000",
      "800": "#FF8F00",
      "900": "#FF6F00",
    },
  },
  "durations": {
    "component": {
      "companion": 300,
      "modal": 300,
      "page": 500,
      "tooltip": 200,
    },
    "fast": 150,
    "instant": 0,
    "normal": 300,
    "slow": 500,
    "slower": 750,
    "slowest": 1000,
  },
  "elevation": {
    "lg": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    },
    "md": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 4,
    },
    "none": {
      "elevation": 0,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    },
    "sm": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 2,
    },
    "xl": {
      "elevation": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 16,
    },
  },
  "radii": {
    "avatar": 999,
    "button": 8,
    "card": 12,
    "full": 999,
    "lg": 12,
    "md": 8,
    "modal": 16,
    "none": 0,
    "sm": 4,
    "xl": 16,
    "xs": 2,
    "xxl": 24,
  },
  "shadows": {
    "moonGlow": {
      "active": {
        "elevation": 15,
        "shadowColor": "#FFD700",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 20,
      },
      "calm": {
        "elevation": 10,
        "shadowColor": "#4A90E2",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
      },
    },
    "securityStatus": {
      "invalid": {
        "elevation": 4,
        "shadowColor": "#E74C3C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      "valid": {
        "elevation": 4,
        "shadowColor": "#27AE60",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    },
  },
  "spacing": {
    "component": {
      "gap": {
        "lg": 16,
        "md": 12,
        "sm": 8,
        "xl": 20,
        "xs": 4,
      },
      "margin": {
        "lg": 24,
        "md": 16,
        "sm": 8,
        "xl": 32,
        "xs": 4,
      },
      "padding": {
        "lg": 20,
        "md": 16,
        "sm": 12,
        "xl": 24,
        "xs": 8,
      },
    },
    "lg": 24,
    "md": 16,
    "sm": 8,
    "xl": 32,
    "xs": 4,
    "xxl": 48,
    "xxxl": 64,
  },
  "typography": {
    "fontFamily": {
      "mono": "Courier New",
      "primary": "System",
    },
    "fontSize": {
      "2xl": 24,
      "3xl": 30,
      "4xl": 36,
      "5xl": 48,
      "6xl": 60,
      "base": 16,
      "lg": 18,
      "sm": 14,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "bold": "700",
      "extrabold": "800",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "lineHeight": {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "textStyles": {
      "body": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 1.5,
      },
      "bodySmall": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 1.375,
      },
      "button": {
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 1.25,
      },
      "caption": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 1.25,
      },
      "h1": {
        "fontSize": 32,
        "fontWeight": "700",
        "lineHeight": 1.25,
      },
      "h2": {
        "fontSize": 24,
        "fontWeight": "600",
        "lineHeight": 1.375,
      },
      "h3": {
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 1.5,
      },
    },
  },
  "zIndices": {
    "base": 0,
    "companion": 9999,
    "dropdown": 100,
    "modal": 1000,
    "overlay": 10,
    "raised": 1,
    "toast": 2000,
    "tooltip": 3000,
  },
}
`;

exports[`Design Tokens Token Structure Snapshots should match typography snapshot 1`] = `
{
  "fontFamily": {
    "mono": "Courier New",
    "primary": "System",
  },
  "fontSize": {
    "2xl": 24,
    "3xl": 30,
    "4xl": 36,
    "5xl": 48,
    "6xl": 60,
    "base": 16,
    "lg": 18,
    "sm": 14,
    "xl": 20,
    "xs": 12,
  },
  "fontWeight": {
    "bold": "700",
    "extrabold": "800",
    "light": "300",
    "medium": "500",
    "normal": "400",
    "semibold": "600",
  },
  "lineHeight": {
    "loose": 2,
    "none": 1,
    "normal": 1.5,
    "relaxed": 1.625,
    "snug": 1.375,
    "tight": 1.25,
  },
  "textStyles": {
    "body": {
      "fontSize": 16,
      "fontWeight": "400",
      "lineHeight": 1.5,
    },
    "bodySmall": {
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 1.375,
    },
    "button": {
      "fontSize": 16,
      "fontWeight": "600",
      "lineHeight": 1.25,
    },
    "caption": {
      "fontSize": 12,
      "fontWeight": "400",
      "lineHeight": 1.25,
    },
    "h1": {
      "fontSize": 32,
      "fontWeight": "700",
      "lineHeight": 1.25,
    },
    "h2": {
      "fontSize": 24,
      "fontWeight": "600",
      "lineHeight": 1.375,
    },
    "h3": {
      "fontSize": 20,
      "fontWeight": "600",
      "lineHeight": 1.5,
    },
  },
}
`;

exports[`Design Tokens Token Structure Snapshots should match zIndices snapshot 1`] = `
{
  "base": 0,
  "companion": 9999,
  "dropdown": 100,
  "modal": 1000,
  "overlay": 10,
  "raised": 1,
  "toast": 2000,
  "tooltip": 3000,
}
`;
